@@ -4,7 +4,7 @@ plugins {
     id 'net.ltgt.apt' version '0.18'
 }
 
-mainClassName = 'validation.issue/foo.Main'
+mainClassName = 'foo.Main'
 
 dependencies {
     annotationProcessor 'io.micronaut:micronaut-inject-java:1.0.0'
@@ -14,27 +14,4 @@ dependencies {
 
 repositories {
     jcenter()
-}
-
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.filter{!it.name.contains("jsr305")}.asPath,
-                '--patch-module', "java.annotation=${classpath.filter{it.name.contains("jsr305")}.asPath}"
-        ]
-        classpath = files()
-    }
-}
-
-run {
-    doFirst {
-        jvmArgs = [
-                '--illegal-access=permit',
-                '--module-path', classpath.filter{!it.name.contains("jsr305")}.asPath,
-                '--add-modules', 'jdk.unsupported',
-                '--patch-module', "java.annotation=${classpath.filter{it.name.contains("jsr305")}.asPath}",
-                '--module', mainClassName
-        ]
-        classpath = files()
-    }
 }
